--- a/cloudformation/service-template.yml
+++ b/cloudformation/service-template.yml
@@ -3,7 +3,11 @@ Description: ECS cluster running single Parity node (on mainnet)
 Parameters:
   VpcId:
     Type: AWS::EC2::VPC::Id
-  InstanceType:
+  SyncInstanceType:
+    Description: Instance type that will be used in created cluster
+    Type: String
+    Default: c5.large
+  PostSyncInstanceType:
     Description: Instance type that will be used in created cluster
     Type: String
     Default: t2.medium
@@ -25,7 +29,15 @@ Parameters:
   DesiredTaskCount:
     Type: Number
     Default: 1
-  VolumeType:
+  SyncVolumeType:
+    Type: String
+    Default: io1
+    AllowedValues:
+      - io1
+      - gp2
+      - st1
+      - sc1
+  PostSyncVolumeType:
     Type: String
     Default: gp2
     AllowedValues:
@@ -33,9 +45,15 @@ Parameters:
       - gp2
       - st1
       - sc1
-  Iops:
+  SyncIops:
+    Type: Number
+    Default: 2500
+  PostSyncIops:
     Type: Number
     Default: 300
+  VolumeSize:
+    Type: Number
+    Default: 100
 
 Mappings:
   AWSRegionToAMI:
@@ -57,7 +75,7 @@ Mappings:
       AMI: ami-ac055447
 Conditions:
   SSHAccess: !Not [!Equals [ !Ref KeyName, ""]]
-  UseSnapshot: !Not [!Equals [ !Ref ChainSnapshotId, ""]]
+  Synced: !Not [!Equals [ !Ref ChainSnapshotId, ""]]
 
 Resources:
   ECSCluster:
@@ -108,47 +126,47 @@ Resources:
     Properties:
       Path: /
       RoleName: !Sub ${AWS::StackName}-ecs-role
-      AssumeRolePolicyDocument: |
-        {
-          "Statement": [{
-            "Action": "sts:AssumeRole",
-            "Effect": "Allow",
-            "Principal": {
-              "Service": "ec2.amazonaws.com"
-            }
-          }]
-        }
+      AssumeRolePolicyDocument:
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ec2.amazonaws.com
+            Action: 'sts:AssumeRole'
+
       Policies:
       - PolicyName: ecs-service
-        PolicyDocument: |
-          {
-            "Statement": [{
-              "Effect": "Allow",
-              "Action": [
-                "ecs:CreateCluster",
-                "ecs:DeregisterContainerInstance",
-                "ecs:DiscoverPollEndpoint",
-                "ecs:Poll",
-                "ecs:RegisterContainerInstance",
-                "ecs:StartTelemetrySession",
-                "ecs:Submit*",
-                "ecr:BatchCheckLayerAvailability",
-                "ecr:BatchGetImage",
-                "ecr:GetDownloadUrlForLayer",
-                "ecr:GetAuthorizationToken",
-                "ec2:DescribeInstanceStatus",
-                "logs:CreateLogStream",
-                "logs:CreateLogGroup",
-                "logs:PutLogEvents",
-                "logs:CreateLogStream",
-                "logs:DescribeLogGroups",
-                "logs:DescribeLogStreams",
-                "logs:PutLogEvents",
-                "route53:*"
-              ],
-              "Resource": "*"
-            }]
-          }
+        PolicyDocument:
+          Statement:
+          - Effect: Allow
+            Action:
+              - ecs:CreateCluster
+              - ecs:DeregisterContainerInstance
+              - ecs:DiscoverPollEndpoint
+              - ecs:Poll
+              - ecs:RegisterContainerInstance
+              - ecs:StartTelemetrySession
+              - ecs:Submit*
+              - ecr:BatchCheckLayerAvailability
+              - ecr:BatchGetImage
+              - ecr:GetDownloadUrlForLayer
+              - ecr:GetAuthorizationToken
+              - ec2:DescribeInstanceStatus
+              - ec2:DescribeVolumes
+              - ec2:CreateSnapshot
+              - logs:CreateLogStream
+              - logs:CreateLogGroup
+              - logs:PutLogEvents
+              - logs:CreateLogStream
+              - logs:DescribeLogGroups
+              - logs:DescribeLogStreams
+              - logs:PutLogEvents
+              - route53:*
+              - cloudformation:DescribeStacks
+            Resource: "*"
+          - Effect: Allow
+            Action:
+              - cloudformation:UpdateStack
+            Resource: !Ref AWS::StackId
   ECSInstanceProfile:
     Type: AWS::IAM::InstanceProfile
     Properties:
@@ -178,19 +196,22 @@ Resources:
         MinInstancesInService: 1
         MaxBatchSize: 1
         PauseTime: PT15M
-        SuspendProcesses:
-          - HealthCheck
-          - ReplaceUnhealthy
-          - AZRebalance
-          - AlarmNotification
-          - ScheduledActions
+        # SuspendProcesses:
+        #   - HealthCheck
+        #   - ReplaceUnhealthy
+        #   - AZRebalance
+        #   - AlarmNotification
+        #   - ScheduledActions
         WaitOnResourceSignals: true
 
   ECSLaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       ImageId: !FindInMap [AWSRegionToAMI, !Ref "AWS::Region", AMI]
-      InstanceType: !Ref InstanceType
+      InstanceType: !If
+        - Synced
+        - !Ref PostSyncInstanceType
+        - !Ref SyncInstanceType
       KeyName: !If
         - SSHAccess
         - !Ref KeyName
@@ -202,16 +223,23 @@ Resources:
       - DeviceName: "/dev/sdh"
         Ebs:
           SnapshotId: !If
-            - UseSnapshot
+            - Synced
             - !Ref ChainSnapshotId
             - !Ref "AWS::NoValue"
-          VolumeSize: '100'
-          VolumeType: !Ref VolumeType
-          Iops: !Ref Iops
+          VolumeSize: !Ref VolumeSize
+          VolumeType: !If
+            - Synced
+            - !Ref PostSyncVolumeType
+            - !Ref SyncVolumeType
+          Iops: !If
+            - Synced
+            - !Ref PostSyncIops
+            - !Ref SyncIops
       UserData:
         "Fn::Base64": !Sub |
           #!/bin/bash
-          yum install -y aws-cfn-bootstrap
+          set -x
+          yum install -y aws-cfn-bootstrap jq
           /opt/aws/bin/cfn-init -v --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSLaunchConfiguration
           /opt/aws/bin/cfn-signal -e $? --region ${AWS::Region} --stack ${AWS::StackName} --resource ECSAutoScalingGroup
     Metadata:
@@ -227,12 +255,14 @@ Resources:
               command: "mkdir /data"
               test: "[ ! -d /data ]"
             03_mkfs:
-              command: !If [ UseSnapshot, "echo 'not running mkfs /dev/sdh'", "mkfs.ext4 /dev/sdh"]
+              command: !If [ Synced, "echo 'not running mkfs /dev/sdh'", "mkfs.ext4 /dev/sdh"]
             04_mount:
               command: "mount /dev/sdh /data"
               test: "! mountpoint -q /data"
             05_register_dns:
               command: "bash -x /home/ec2-user/register-dns"
+            06_update_stack_on_sync:
+              command: !If [ Synced, "echo 'not updating stack on sync'", "bash -x /home/ec2-user/update-stack-on-sync"]
           files:
             "/etc/cfn/cfn-hup.conf":
               mode: "000400"
@@ -320,6 +350,86 @@ Resources:
                 sed -e s/{local_ipv4}/$LOCAL_IP/g change-record-set.json.tmpl > change-record-set.json
                 aws route53 change-resource-record-sets --hosted-zone-id ${HostedZone} --change-batch file:///home/ec2-user/change-record-set.json
 
+            "/home/ec2-user/update-stack-on-sync":
+              mode: "000400"
+              owner: ec2-user
+              group: ec2-user
+              content: !Sub |
+                set -x
+                set -euo pipefail
+
+                export AWS_DEFAULT_REGION="${AWS::Region}"
+
+                STACK_NAME="${AWS::StackId}"
+                LOCAL_IP=$(curl http://169.254.169.254/latest/meta-data/local-ipv4)
+                AWS_INSTANCE_ID=$(curl http://169.254.169.254/latest/meta-data/instance-id)
+                ROOT_DISK_ID=$(aws ec2 describe-volumes --filter "Name=attachment.instance-id, Values=$AWS_INSTANCE_ID" --query "Volumes[].VolumeId" --out text)
+                BLOCK_ZERO_RESP='{"result":"0x0"}'
+
+                poll() {
+                  RESULT=$(curl -X POST -H 'Content-Type: application/json' \
+                    --data '{"jsonrpc":"2.0","method":"eth_blockNumber","params":[],"id":83}' \
+                    "$LOCAL_IP:8545" || echo "$BLOCK_ZERO_RESP")
+                  BLOCK_HEX=$(echo $RESULT | jq .result -r | cut -c2-) # cut off 0x prefix
+                  echo $(( 16#$BLOCK_HEX ))
+                }
+
+                # accepts args: target block
+                sync_to_block() {
+                  echo "WILL EXIT AFTER SYNCING TO BLOCK $1"
+                  while true
+                  do
+                    CURRENT_BLOCK=$(poll)
+                    echo "CURRENT BLOCK: $CURRENT_BLOCK"
+                    if [ "$CURRENT_BLOCK" >= "$1" ];
+                    then
+                      echo "SYNC COMPLETE!"
+                      break
+                    fi
+
+                    sleep 30 # seconds
+                  done
+                }
+
+                # accepts args: region, stack name
+                get_update_stack_params() {
+                  echo "taking snapshot of EBS volume: $ROOT_DISK_ID"
+                  SNAPSHOT_ID=$(aws ec2 create-snapshot \
+                    --volume-id "$ROOT_DISK_ID" \
+                    --description "ethereum blockchain synced up to block $TARGET_BLOCK" \
+                    | jq -r .SnapshotId)
+
+                  echo "waiting for snapshot to finish: $SNAPSHOT_ID"
+                  aws ec2 wait snapshot-completed --filters "Name=snapshot-id, Values=$SNAPSHOT_ID"
+
+                  PARAMETERS=$(aws cloudformation describe-stacks --stack-name "$2" |
+                    jq '[.Stacks[] | select(.StackStatus=="UPDATE_COMPLETE" or .StackStatus=="CREATE_COMPLETE")][0].Parameters')
+
+                  CURRENT_SNAPSHOT=$(echo "$PARAMETERS" | jq '.[] | select(.ParameterKey == "ChainSnapshotId")')
+                  if [ $(echo $CURRENT_SNAPSHOT | wc -c) == "0" ]
+                  then
+                    PARAMETERS=$(echo $PARAMETERS | jq ".[.|length] |= . + {\"ParameterKey\":\"ChainSnapshotId\",\"ParameterValue\":\"$SNAPSHOT_ID\"}")
+                  else
+                    PARAMETERS=$(echo $PARAMETERS | jq "[.[] | select(.ParameterKey == \"ChainSnapshotId\").ParameterValue = \"$SNAPSHOT_ID\"]")
+                  fi
+
+                  echo "$PARAMETERS"
+                }
+
+                # accepts args: target block, stack name
+                sync_and_update_stack() {
+                  sync_to_block "$1"
+                  PARAMETERS=$(get_update_stack_params "$2")
+                  echo "updating stack with parameters: $PARAMETERS"
+                  aws cloudformation update-stack \
+                    --stack-name "$3" \
+                    --parameters "$PARAMETERS" \
+                    --use-previous-template \
+                    --capabilities CAPABILITY_NAMED_IAM
+                }
+
+                sync_and_update_stack $TARGET_BLOCK $STACK_NAME
+
           services:
             sysvinit:
               cfn-hup:
@@ -340,16 +450,13 @@ Resources:
     Properties:
       Path: /
       RoleName: !Sub ${AWS::StackName}-service-role
-      AssumeRolePolicyDocument: |
-        {
-          "Statement": [{
-            "Effect": "Allow",
-            "Principal": {
-              "Service": "ecs-tasks.amazonaws.com"
-            },
-            "Action": "sts:AssumeRole"
-          }]
-        }
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+            Action: sts:AssumeRole
 
   TaskDefinition:
     Type: AWS::ECS::TaskDefinition
@@ -358,7 +465,7 @@ Resources:
       TaskRoleArn: !Ref TaskRole
       NetworkMode: bridge
       ContainerDefinitions:
-        - Image: !Sub ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${RepositoryName}:latest
+        - Image: !Sub ${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/${RepositoryName}:autoupdater
           Essential: true
           Memory: 3000
           MemoryReservation: 1800
@@ -382,6 +489,10 @@ Resources:
               awslogs-group: !Ref ECSLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: parity
+          Environment:
+            - Name: "TARGET_BLOCK"
+              Value: "1"
+
       Volumes:
         - Host:
             SourcePath: /data/chains
@@ -394,6 +505,7 @@ Resources:
       Cluster: !Ref ECSCluster
       DesiredCount: !Ref DesiredTaskCount
       TaskDefinition: !Ref TaskDefinition
+      # TaskDefinition: !Join [ "", ['arn:aws:ecs:', !Ref "AWS::Region", ':', !Ref "AWS::AccountId", ':task-definition/parity:1']]
 
   HostedZone:
     Type: "AWS::Route53::HostedZone"
